// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Result default 1`] = `
<div
  class="arco-result arco-result-is-info"
>
  <div
    class="arco-result-icon"
  >
    <span
      class="arco-result-icon-tip arco-result-icon-info"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-info"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M25 39H27V60H25z"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 39H27V60H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 11H27V13H25z"
          transform="rotate(180 25 11)"
        />
        <path
          d="M25 11H27V13H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 11)"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Result set className globally 1`] = `
<div
  class="arco-result arco-result-is-info global-default-class"
>
  <div
    class="arco-result-icon"
  >
    <span
      class="arco-result-icon-tip arco-result-icon-info"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-info"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M25 39H27V60H25z"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 39H27V60H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 11H27V13H25z"
          transform="rotate(180 25 11)"
        />
        <path
          d="M25 11H27V13H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 11)"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Result set className globally and component set className itself. 1`] = `
<div
  class="arco-result arco-result-is-info component-class"
>
  <div
    class="arco-result-icon"
  >
    <span
      class="arco-result-icon-tip arco-result-icon-info"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-info"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M25 39H27V60H25z"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 39H27V60H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 11H27V13H25z"
          transform="rotate(180 25 11)"
        />
        <path
          d="M25 11H27V13H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 11)"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Result set data-* property 1`] = `
<div
  class="arco-result arco-result-is-info"
  data-test-name="Result"
>
  <div
    class="arco-result-icon"
  >
    <span
      class="arco-result-icon-tip arco-result-icon-info"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-info"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M25 39H27V60H25z"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 39H27V60H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 39)"
        />
        <path
          d="M25 11H27V13H25z"
          transform="rotate(180 25 11)"
        />
        <path
          d="M25 11H27V13H25z"
          fill="currentColor"
          stroke="none"
          transform="rotate(180 25 11)"
        />
      </svg>
    </span>
  </div>
</div>
`;
